# OpenSim-Dev

./: README.md
Cmake/: CMakeLists.txt
Embedded_Python/: README.md
Example/Arm_model/: Arm_Model_01.cpp  hello.py
Example/Example01/: Example01.cpp
Plotting/: READMEplot.md
